Fixed margins, font size, and text alignment.

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -91,12 +91,12 @@ h1 {
     font-weight: 400;
 }
 h2 { 
-    font-size: clamp(0.75rem, 5.5vw, 2.5rem); 
+    font-size: clamp(0.75rem, 5.5vw + 0.5rem, 2.5rem); 
     font-weight: 400;
 }
 h3 {
     text-indent: 1rem; 
-    font-size: clamp(0.55rem, 3.25vw, 1.75rem); 
+    font-size: clamp(0.55rem, 4.5vw + 0.5rem, 1.75rem); 
     font-family: var(--outfit-font);
     font-weight: 600;
 }
@@ -172,6 +172,7 @@ p {
 
 .custom-hr {
     border-top: 1px solid var(--stone-150-color);
+    margin-inline: 2rem;
 }
 
 @media (max-width: 765px) {
@@ -193,6 +194,7 @@ p {
     }
 
     .nutrition-item td {
-        padding: 0;
+        padding: 0.5rem 0.25rem;
+        text-align: center;
     }
 }
